--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "demo": "webpack"
+    "demo": "webpack --config ./demo/webpack.config.js"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^5.3.3",
+    "typescript": "^3.4.4",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
-  },
-  "dependencies": {
-    "typescript": "^3.4.2"
   }
 }
