--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "demo": "webpack --config ./demo/webpack.config.js"
   },
   "devDependencies": {
