--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "video-snap",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "main": "VideoSnap.js",
   "author": "Dmitry Rodnikov",
   "description": "Get multiple snapshots from video in a browser",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dmitryrodnikov/video-snap"
+  },
   "scripts": {
     "build": "tsc",
     "demo": "webpack --config ./demo/webpack.config.js"
