--- a/package.json
+++ b/package.json
@@ -22,5 +22,20 @@
     "typescript": "^3.6.2",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7"
-  }
+  },
+  "keywords": [
+    "video-snapshot",
+    "video",
+    "snapshot",
+    "capture",
+    "thumbnail",
+    "preview",
+    "screenshot",
+    "multiple",
+    "image",
+    "file",
+    "decode",
+    "mpeg",
+    "mov"
+  ]
 }
