--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "video-snap",
-  "version": "1.0.1",
+  "version": "1.0.1-alpha.1",
   "license": "MIT",
   "main": "dist/index.js",
   "author": "Dmitry Rodnikov",
