--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "author": "Dmitry Rodnikov",
   "description": "Get multiple snapshots from video in a browser",
+  "homepage": "https://dmitryrodnikov.github.io/video-snap",
   "repository": {
     "type": "git",
     "url": "https://github.com/dmitryrodnikov/video-snap"
@@ -14,9 +15,12 @@
   ],
   "scripts": {
     "build": "tsc",
-    "demo": "webpack --config ./demo/webpack.config.js"
+    "demo": "webpack --config ./demo/webpack.config.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d demo/dist"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^5.4.5",
     "typescript": "^3.6.2",
